# django_allauth

./: .envrc  Makefile  pyproject.toml
accounts/: models.py
config/: settings.py  urls.py
staticfiles/: staticfiles.json
