[tool.poetry]
name = "template-django-basic"
version = "0.1.0"
description = ""
authors = ["Benedict Thekkel <bthekkel1@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-allauth = "^64.1.0"
requests = "^2.32.3"
pyjwt = "^2.9.0"
python3-saml = "^1.16.0"
python-openid = "^2.2.5"
requests-oauthlib = "^2.0.0"
cryptography = "^43.0.0"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.2"
whitenoise = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
